# dumb.co

./: .env  404.html  CNAME  README.md  cert-b64.txt  index.html  package-lock.json  package.json  styles.css  tsconfig.node.json  vite.config.ts
assets/: DailyMotion-B6yiEyop.js  DailyMotion-BdupVKMm.js  DailyMotion-BkVkHfie.js  DailyMotion-CJIv3bog.js  DailyMotion-Cc5W9oPP.js  DailyMotion-DMTzUOZR.js  DailyMotion-DjYmwsx3.js  DailyMotion-Dqg198Kn.js  DailyMotion-OBIlaScG.js  DailyMotion-u908v5zo.js  DailyMotion-wtG1YdcT.js  Facebook-BBVLv-q2.js  Facebook-BMD2ps6s.js  Facebook-BPUdK6xL.js  Facebook-BWybXne3.js  Facebook-BZuKq0C2.js  Facebook-BmYeEWlp.js  Facebook-Bq6ihua3.js  Facebook-BvOjBf5m.js  Facebook-CU0PIoJc.js  Facebook-DMX9aoRl.js  Facebook-DvZ2D8Aw.js  FilePlayer-B45X-rjW.js  FilePlayer-BDV3kohW.js  FilePlayer-BbBxCwUs.js  FilePlayer-BdcNrHiu.js  FilePlayer-Bvof1UTg.js  FilePlayer-CGInQKY3.js  FilePlayer-CansVe6g.js  FilePlayer-CdsDVSCm.js  FilePlayer-kucaES6A.js  FilePlayer-lAYyS416.js  FilePlayer-rwlQU2Cp.js  Kaltura-B5dpw_Wt.js  Kaltura-BHKrLeIH.js  Kaltura-BHdkLM66.js  Kaltura-BOJ9CNBl.js  Kaltura-BTvIBw77.js  Kaltura-CceUigO1.js  Kaltura-D3USfzXF.js  (+134 more)
desktop-signin/: .gitignore  README.md  package-lock.json  package.json
desktop-signin/src-tauri/: Cargo.toml  tauri.conf.json
desktop-signin/src-tauri/capabilities/: default.json
desktop-signin/src-tauri/icons/: README.md  icon.icns
desktop-signin/src-tauri/src/: lib.rs  main.rs
downloads/: dumb-contacts-sync.apk  dumb-down-login-1.5.6.xpi  dumb-down-login-1.5.8.xpi  sha.sh  version.json
(+95 files in other folders)
