[package]
name = "dumb-down-signin"
version = "0.1.0"
description = "Dumb Down Signin"
authors = ["Offline DC"]
edition = "2021"

[lib]
name = "dumb_down_signin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2. The webview `cookies()` API (used to read the HttpOnly Google
# session cookies) is available in 2.1+.
tauri = { version = "2.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Render the harvested cookies as a QR code (SVG) that the Dumb Down Android
# companion app scans. No relay/crypto here — the companion does delivery.
qrcode = "0.14"

[features]
# This feature is used for production builds or when a dev server is not
# specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
